--- a/logfile-analysis-component/angular.json
+++ b/logfile-analysis-component/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "logfile-analysis-component:build"
+            "browserTarget": "logfile-analysis-component:build",
+            "port": 4202
           },
           "configurations": {
             "production": {
